# comfy-builder

./: Cargo.toml  LOCAL.md  README.md  __init__.py  docker-compose.yml  justfile  pyproject.toml  rust-toolchain.toml
.github/: ISSUE_TEMPLATE.md
comfyui-macro/: Cargo.toml
comfyui-macro/src/: lib.rs  options.rs
comfyui-macro/src/macros/: enum.rs  input.rs  mod.rs  output.rs  root.rs
src/: attributes.rs  lib.rs  node.rs  resize_image.rs  tensor.rs
src/my-super-node/: Cargo.toml  __init__.py
src/my-super-node/src/: custom_node.rs  lib.rs  node.rs  tensor.rs
src/my_test_node/: nodes.py
src/nodes/: mod.rs  resize_image.rs
tests/: __init__.py  test_my_test_node.py
