[package]
name = "god-nodes"
version = "0.1.0"
edition = "2024"

[lib]
name = "god_nodes"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py312"] }
candle-core = "0.9.1"
numpy = "0.26.0"
rayon = "1.11.0"
resize = "0.8.8"
indexmap = "2.11.4"
comfyui-macro = { path = "./comfyui-macro" }
