[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "./packages/comfyui-macros",
    "./packages/comfyui-plugin",
    "./packages/comfyui-custom-nodes",
]

[workspace.dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py312"] }
candle-core = "0.9.1"
comfyui-macro = { path = "./packages/comfyui-macros" }
comfyui-plugin = { path = "./packages/comfyui-plugin" }
