[workspace.package]
version = "0.0.4"
edition = "2024"
description = "A system for building custom nodes for ComfyUI in Rust."
readme = "README.md"
repository = "https://github.com/milewski/comfy-node-builder"
homepage = "https://github.com/milewski/comfy-node-builder"
license = "MIT"
authors = ["Rafael Milewski <rafael.milewski@gmail.com>"]
keywords = ["comfy", "comfyui", "comfy-ui"]
categories = ["development-tools"]
exclude = [".git", ".github"]
rust-version = "1.90.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
resolver = "3"
members = [
    "packages/comfy-builder-core",
    "packages/comfy-builder-macros",
    "packages/comfy-builder-custom-nodes",
]

[workspace.dependencies]
#pyo3 = { version = "0.26.0", features = ["abi3-py312", "experimental-async"] }
#candle-core = "0.9.1"
#comfy-builder-macros = { path = "packages/comfy-builder-macros" }
#comfy-builder-core = { path = "packages/comfy-builder-core" }
